[package]
name          = "egl"
version       = "0.2.7"
authors       = ["Sean Kerr <sean@metatomic.io>"]
license       = "Apache-2.0"
description   = "Rust bindings for EGL"
homepage      = "https://github.com/seankerr/rust-egl"
repository    = "https://github.com/seankerr/rust-egl"
readme        = "README.md"
keywords      = ["egl", "gl", "khronos", "opengl"]
exclude       = [".gitignore"]

[dependencies]
khronos = {git = "https://github.com/ischeinkman/rust-khronos"}
libc    = "0.2.43"
